added constants to ipynb and added more to readme for popularity analysis

--- a/popularity/popularity_graphs_approach2.ipynb
+++ b/popularity/popularity_graphs_approach2.ipynb
@@ -30,24 +30,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Constants used in the program:\n",
     "# URL_DATA_FOLDER is where all the data  is saved.\n",
-    "URL_DATA_FOLDER = \"./\"\n",
+    "URL_DATA_FOLDER = \"../../popularity_01182021/\"\n",
     "\n",
     "# ALEXA TOP 1M file\n",
-    "ALEXA_TOP_1M_FILEPATH = \"./alexa-top1m-2020-09-03_0900_UTC.csv\"\n",
+    "ALEXA_TOP_1M_FILEPATH = \"../../popularity_01182021/alexa-top1m-2020-09-03_0900_UTC.csv\"\n",
     "\n",
     "# CDF_FILE_OUTPUT is where the CDF graph will be outputted to\n",
-    "CDF_FILE_OUTPUT = 'test.pdf'"
+    "TOP_10_TRACKERS_PATH = \"./top_10_trackers.pdf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,37 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./13\\output\\urls_0.txt\n",
-      "./13\\output\\urls_1.txt\n",
-      "./13\\output\\urls_2.txt\n",
-      "./13\\output\\urls_3.txt\n",
-      "./13\\output\\urls_4.txt\n",
-      "./13\\output\\urls_5.txt\n",
-      "./13\\output\\urls_6.txt\n",
-      "./13\\output\\urls_7.txt\n",
-      "./14\\output\\urls_0.txt\n",
-      "./14\\output\\urls_1.txt\n",
-      "./14\\output\\urls_2.txt\n",
-      "./14\\output\\urls_3.txt\n",
-      "./14\\output\\urls_4.txt\n",
-      "./14\\output\\urls_5.txt\n",
-      "./14\\output\\urls_6.txt\n",
-      "./14\\output\\urls_7.txt\n",
-      "./15\\output\\urls_0.txt\n",
-      "./15\\output\\urls_1.txt\n",
-      "./15\\output\\urls_2.txt\n",
-      "./15\\output\\urls_3.txt\n",
-      "./15\\output\\urls_4.txt\n",
-      "./15\\output\\urls_5.txt\n",
-      "./15\\output\\urls_6.txt\n",
-      "./15\\output\\urls_7.txt\n"
+      "../../popularity_01182021/13\\output\\urls_0.txt\n",
+      "../../popularity_01182021/13\\output\\urls_1.txt\n",
+      "../../popularity_01182021/13\\output\\urls_2.txt\n",
+      "../../popularity_01182021/13\\output\\urls_3.txt\n",
+      "../../popularity_01182021/13\\output\\urls_4.txt\n",
+      "../../popularity_01182021/13\\output\\urls_5.txt\n",
+      "../../popularity_01182021/13\\output\\urls_6.txt\n",
+      "../../popularity_01182021/13\\output\\urls_7.txt\n",
+      "../../popularity_01182021/14\\output\\urls_0.txt\n",
+      "../../popularity_01182021/14\\output\\urls_1.txt\n",
+      "../../popularity_01182021/14\\output\\urls_2.txt\n",
+      "../../popularity_01182021/14\\output\\urls_3.txt\n",
+      "../../popularity_01182021/14\\output\\urls_4.txt\n",
+      "../../popularity_01182021/14\\output\\urls_5.txt\n",
+      "../../popularity_01182021/14\\output\\urls_6.txt\n",
+      "../../popularity_01182021/14\\output\\urls_7.txt\n",
+      "../../popularity_01182021/15\\output\\urls_0.txt\n",
+      "../../popularity_01182021/15\\output\\urls_1.txt\n",
+      "../../popularity_01182021/15\\output\\urls_2.txt\n",
+      "../../popularity_01182021/15\\output\\urls_3.txt\n",
+      "../../popularity_01182021/15\\output\\urls_4.txt\n",
+      "../../popularity_01182021/15\\output\\urls_5.txt\n",
+      "../../popularity_01182021/15\\output\\urls_6.txt\n",
+      "../../popularity_01182021/15\\output\\urls_7.txt\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -414,13 +414,13 @@
     "    axs[count].set_axisbelow(True)\n",
     "    axs[count].grid(color='#888888', linestyle=':', linewidth=0.1)\n",
     "\n",
-    "plt.savefig(\"./top_10_trackers.pdf\", format='pdf')\n",
+    "plt.savefig(TOP_10_TRACKERS_PATH, format='pdf')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
        "  352]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
        "2911461"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
        "705762"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "0.24240819300000926"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
